fix(carousel): fixed btn carousel history

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -326,7 +326,7 @@
           </drag-scroll>
         </div>
         <div class="footer-carousel-btn-right">
-          <i (click)="nextCarousel()" class="fas fa-chevron-right"></i>
+          <i (click)="moveRight()" class="fas fa-chevron-right"></i>
         </div>
       </div>
     </div>
