fix(landing pages): the texts have been corrected

--- a/src/app/landing-page-ge/landing-page-ge.component.html
+++ b/src/app/landing-page-ge/landing-page-ge.component.html
@@ -14,7 +14,7 @@
             Visão geral do programa
           </h2>
           <p>
-            O Empreendedor Global é uma experiência de imersão em Startup durante 6 a 12 semanas em que o jovem tem a chance de viver o ambiente dinâmico e inovador de uma Startup. As áreas de atuação são Marketing, Administração, T.I., Design e Desenvolvimento de Negócios! O jovem precisa apenas ter o inglês intermediário e alguma experiência prévia profissional ou acadêmia na área de atuação de preferência
+            O Empreendedor Global é uma experiência de imersão em Startup durante 6 a 12 semanas em que o jovem tem a chance de viver o ambiente dinâmico e inovador de uma Startup. As áreas de atuação são Marketing, Administração, T.I., Design e Desenvolvimento de Negócios! O jovem precisa apenas ter o inglês intermediário e alguma experiência prévia profissional ou acadêmica na área de atuação de preferência
         </div>
       </div>
     </div>
@@ -78,7 +78,7 @@
                 Aplicar em vagas
               </h3>
               <p class="lighter">
-                No site você pode se candidatar às diversas vagas que encaixam no seu perfil
+                No site você pode se candidatar as diversas vagas que encaixam no seu perfil, a partir da consultoria feita com seu escritório da AIESEC
               </p>
             </div>
           </div>
@@ -158,7 +158,7 @@
                 Vou receber salário para trabalhar na Startup?
               </h3>
               <p class='lighter italic'>
-                Não! A experiência não é remunerada. Na maioria das vagas você recebe acomodação no período do intercâmbio.
+                Não, a experiência não é remunerada para este tipo de intercâmbio. Mas em compensação, você irá receber acomodação pelo período do intercâmbio.
               </p>
             </div>
             <div class="col-sm-12">
