--- a/src/app/landing-page-gt/landing-page-gt.component.html
+++ b/src/app/landing-page-gt/landing-page-gt.component.html
@@ -78,7 +78,7 @@
                 Aplicar em vagas
               </h3>
               <p class="lighter">
-                No site você pode se candidatar às diversas vagas que encaixam no seu perfil
+                No site você pode se candidatar as diversas vagas que encaixam no seu perfil, a partir da consultoria feita com seu escritório da AIESEC
               </p>
             </div>
           </div>
@@ -91,7 +91,7 @@
                   Entrevistas para vagas que for selecionado
                 </h3>
                 <p class="lighter">
-                  Você vai passar por uma entrevista com a oportunidade que você se candidatou, para se aprsentar, responder algumas perguntas e tirar dúvidas
+                  VocÊ vai passar por algumas entrevists ao longo do processo para a vaga a qual você se candidatou
                 </p>
               </div>
             </div>
@@ -104,7 +104,7 @@
                     Ser aprovado na vaga
                   </h3>
                   <p class="lighter">
-                    Depois do contato com a AIESEC que vai te receber, você é convidado a fechar a vaga para aquele projeto
+                    Depois das entrevistas, você será convidado a fechar o intercâmbio para a oportunidade que for aceito, mediante o pagamento de uma taxa administrativa
                   </p>
                 </div>
               </div>
