--- a/src/app/landing-page-gv/landing-page-gv.component.html
+++ b/src/app/landing-page-gv/landing-page-gv.component.html
@@ -14,7 +14,7 @@
             Visão geral do programa
           </h2>
           <p>
-            O Voluntário Global é uma experiência voluntário em ONGS de diversos países. Todos os projetos são vinculados ao Objetivos
+            O Voluntário Global é uma experiência voluntário em ONGs de diversos países. Todos os projetos são vinculados ao Objetivos
             Desenvolvimento Sustentável das Nações Unidas e tem impacto real nas comunidades onde são realizados. Os projetos
             duram a partir de 6 semanas e o único requisito é a vontade de deixar sua marca no mundo!
         </div>
