--- a/src/app/landing-page-menu/landing-page-menu.component.html
+++ b/src/app/landing-page-menu/landing-page-menu.component.html
@@ -12,7 +12,7 @@
           </div>
           <ul id="menu">
             <li>
-              Para jovens
+              Faça um intercâmbio
               <ul class="animated fadeIn faster">
                 <li routerLink="/landing-page-gv">
                   Voluntário Global
@@ -31,7 +31,7 @@
               </ul>
             </li>
             <li>
-              Para organizações
+              Seja nosso Parceiro
               <ul class="animated fadeIn faster">
                 <a href="http://aiesec.org.br/seja-parceiro/ong/">
                   <li>
