--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -131,7 +131,7 @@
             <div class="col-3 mobile-6"></div>
             <div class="col-9">
               <p>
-                Viva em um ambiente corporativo ensinando idiomas, trabalhando com TI ou em áreas de Administração
+                Viva em um ambiente corporativo ensinando idiomas, trabalhando com TI ou em áreas de administração e marketing.
               </p>
             </div>
           </div>
@@ -215,7 +215,7 @@
     <div class="container">
       <div class="row">
         <h1 class="italic centered">
-          Numa experiência com a AIESEC você vai
+          Em uma experiência com a AIESEC você vai
         </h1>
 
         <div class="col-lg-7 col-sm-12 col-md-12 align-left">
@@ -228,8 +228,8 @@
             </li>
             <li class="bullet-2 margin">
               <span>
-                Provas sua habilidade de fazer uma difernça no mundo e se conectar
-                <br> com temas globais.
+                Provar sua habilidade de fazer uma diferença no mundo, 
+                <br> se conectando com temas globais.
               </span>
             </li>
             <li class="bullet-3 margin">
@@ -313,7 +313,7 @@
                     quanto pessoalmente. Meu ano lá foi um divisor de águas na minha carreira e pra pessoa que sou hoje!""
                   </p>
                   <span>
-                    Amanda Peckonick
+                    Amanda Peconick
                   </span>
                   <ul>
                     <li></li>
